--- a/SCPSL Voice controller.csproj
+++ b/SCPSL Voice controller.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <PackageReference Include="InputSimulator" Version="1.0.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="System.Management" Version="6.0.0" />
     <PackageReference Include="System.Speech" Version="6.0.0" />
     <PackageReference Include="System.Windows.Extensions" Version="6.0.0" />
   </ItemGroup>
